# schema-xsd

./: .gitignore  AGENTS.md  CNAME  Cargo.toml  README.md  build.gradle.kts  changeset.xsd  gradle.properties  publish.sh  schema.xsd  settings.gradle.kts
.serena/: project.yml
src/: lib.rs
